format for mobile. note: audio is still having issues on mobile but product in solid on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 body {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 
 .App {
+  margin: auto;
   display: flex;
   justify-content: center;
   padding-top: 7vh;
+  overflow: hidden;
 }
 
 h4 {
@@ -14,7 +17,7 @@ h4 {
 }
 
 #display h1 {
-  font-size: 5em;
+  font-size: 4em;
   font-weight: bolder;
   text-decoration: underline;
 }
@@ -24,20 +27,20 @@ h4 {
 .drum-pads {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
 }
 
 .drum-pad {
-  border: 5px solid rgb(202, 146, 255);
+  border: 5px solid rgb(233, 146, 255);
   border-radius: 10px;
-  margin: 3px;
-  width: 150px;
-  height: 150px;
+  width: 95%;
+  height: 95%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 9vh;
+  font-size: 8.5vh;
   font-weight: bolder;
-  color: rgba(214, 214, 214, 0.164);
+  color: rgba(194, 194, 194, 0.384);
 }
 
 /* Input Sliders */
@@ -84,6 +87,7 @@ input[type=range]::-webkit-slider-thumb {
 /* Volume & Speed Sections */
 .volume, .speed {
   margin-bottom: 30px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
